--- a/photos/gallery003/index.html
+++ b/photos/gallery003/index.html
@@ -41,7 +41,7 @@
 
             <h3 style="text-align: center">
                 Small Tournament <br />
-                Tumbleweek Recreation Center (TRC) <br />
+                Tumbleweed Recreation Center (TRC) <br />
                 June 29, 2019
             </h3>
 
