remove tournament Oct 2-3

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118689863-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-118689863-1');
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "UA-118689863-1");
         </script>
-            
+
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -49,10 +51,10 @@
                 <h4>Welcome to the ping pong club in Chandler Arizona!</h4>
 
                 <p>
-                    The Chandler Table Tennis Club (CTTC) is collection of ping pong enthusiasts assembled in May 2017
-                    to promote the sport in Chandler Arizona. Since 2017 the City of Chandler has graciously provided
-                    two venues and more than 10 tournament-level tables for the enjoyment of table tennis making Chandler a great place
-                    to live a healthy, active lifestyle.
+                    The Chandler Table Tennis Club (CTTC) is collection of ping pong enthusiasts assembled in
+                    May 2017 to promote the sport in Chandler Arizona. Since 2017 the City of Chandler has
+                    graciously provided two venues and more than 10 tournament-level tables for the enjoyment
+                    of table tennis making Chandler a great place to live a healthy, active lifestyle.
                 </p>
 
                 <!-- 
@@ -69,13 +71,13 @@
                 -->
 
                 <p>
-                    Table Tennis can be played at an equal level by men and women, kids and adults, young and old.
-                    It's the most fun, fair and equalizing sport on the planet!
+                    Table Tennis can be played at an equal level by men and women, kids and adults, young and
+                    old. It's the most fun, fair and equalizing sport on the planet!
                 </p>
 
                 <p>
-                    Don't be a couch potato watching sports you don't play on the television. Come play with us. We welcome
-                    beginners and experienced players alike to play with us.
+                    Don't be a couch potato watching sports you don't play on the television. Come play with
+                    us. We welcome beginners and experienced players alike to play with us.
                 </p>
             </section>
 
@@ -142,42 +144,6 @@
                         </div>
                     </div>
                 </div>
-            </section>
-
-            <section>
-                <h4>Upcoming Tournaments</h4>
-
-                <h6>Chandler Community Table Tennis Tournament October 2-3, 2021 (Non-Sanctioned)</h6>
-               
-                <ul>
-                    <li>Double elimination, two matches minimum guaranteed. </li>
-                    <li>Singles will start at 2 pm on Oct. 2nd / Doubles will start at 9 am on Oct. 3rd.</li>
-                    <li>
-                        Registration opens: 
-                        <ul>
-                            <li>Chandler Residents: registration opens Aug 3, 2021 10:00 AM</li>
-                            <li>Non-residents: registration opens Aug 6, 2021 10:00 AM</li>
-                        </ul>
-                    </li>
-                    <li>
-                        To register online:
-                        <ol>
-                            <li>Go to <a target="tournament" href="https://chandleraz.gov/registration">chandleraz.gov/registration</a> or <a target="tournament" href="https://anc.apm.activecommunities.com/chandleraz/home?onlineSiteId=0&locale=en-US&from_original_cui=true">click here</a></li>
-                            <li>Sign In or create an account. </li>
-                            <li>Search for "ping pong tournament"</li>
-                            <li>Select age groups: 8-18, 19-50 or 51 and up for singles and/or mixed/family doubles 
-                                <ul>
-                                    <li>Doubles is either mixed or family.</li>
-                                    <li>Mixed means any male female combination can play together whether in the same family or not.</li>
-                                    <li>Family means any two family members can play together.</li>
-                                </ul>
-                            </li>
-                            <li>Click the one you would like to participate in and continue...</li>
-                        </ol>
-                    <li>To register in person: Please go to Chandler Community Center at: 125 E Commonwealth Ave, Chandler, AZ 85225</li>
-                    <li>If you need more information please call: 480-782-2728</li>
-                </ul>
-                </p>
             </section>
         </div>
 
