update schedule in CCC

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/style.css" />
+        <style>
+            em {
+                color: red;
+                font-weight: bold;
+            }
+        </style>
         <script defer src="/js/sidenav.js"></script>
         <title>CTTC: Home</title>
     </head>
@@ -106,10 +112,11 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 8am - 12pm and 4pm - 7pm <br />
-                                Tuesday (except august 31st): 8am - 12pm <br />
-                                Wednesday: 8am - 12pm <br />
-                                Friday: 12pm - 4pm
+                                Monday: 4pm - 7pm <br />
+                                Tuesday: 8pm - 12 pm <em>(No PP on 10/12, 10/26)</em> <br />
+                                Wednesday: 4pm - 7pm <br />
+                                Thursday: 4pm - 7pm <br />
+                                Saturday: 9am - 12pm <em> (No PP on 10/2)</em>
                             </div>
                         </div>
                     </div>
