--- a/links.html
+++ b/links.html
@@ -49,6 +49,44 @@
 
             <h3>Links</h3>
 
+            <div class="card-horiz hoverable flex-direction-column width50 div-center">
+                <a
+                    class="card-image width100"
+                    style="
+                        min-height: 140px;
+                        background-image: url('img/table_tennis_11.png');
+                        background-size: cover;
+                        background-position: center bottom;
+                    "
+                    target="_blank"
+                    href="https://www.tabletennis11.com/"
+                >
+                </a>
+
+                <div class="card-text width100">
+                    <h5>tabletennis11.com</h5>
+
+                    <p>
+                        This is the best place we've found for low price, fast shipping and high-quality
+                        racket assembly.
+                    </p>
+
+                    <p>They have most brands though, unfortunately, they don't sell Butterfly in the US.</p>
+
+                    <p>
+                        They are located in Estonia but their shipping is miraculously fast. We've ordered
+                        paddles, balls and rubber on Monday and received the finished paddles with rubber
+                        perfectly attached by Thursday. Truly incredible!
+                    </p>
+
+                    <p>
+                        <a target="_blank" href="https://www.tabletennis11.com/">
+                            Table Tennis 11 Online Store
+                        </a>
+                    </p>
+                </div>
+            </div>
+
             <div class="card-horiz hoverable flex-direction-column width80 div-center">
                 <a
                     class="card-image width100"
@@ -67,12 +105,15 @@
                     <h5>Ping Pong Prince</h5>
 
                     <p>
-                        Table Tennis tips, coaching and commentary. Featuring ping pong trick shots and other crazy
-                        shots by professional table tennis players as well as amateurs.
+                        Table Tennis tips, coaching and commentary. Featuring ping pong trick shots and other
+                        crazy shots by professional table tennis players as well as amateurs.
                     </p>
 
                     <p>
-                        <a target="_blank" href="https://www.youtube.com/channel/UCAHuuX0Kk4BBQMQ30cfW6CA/videos">
+                        <a
+                            target="_blank"
+                            href="https://www.youtube.com/channel/UCAHuuX0Kk4BBQMQ30cfW6CA/videos"
+                        >
                             Ping Pong Prince Youtube Channel
                         </a>
                     </p>
@@ -96,11 +137,13 @@
                     <h5>Coach Yangyang Jia</h5>
 
                     <p>
-                        This beautiful young lady has excellent advice for players from beginner to intermediate level.
+                        This beautiful young lady has excellent advice for players from beginner to
+                        intermediate level.
                     </p>
 
                     <p>
-                        She explains how to hold the paddle, how to stand, how to move and then covers all the strokes.
+                        She explains how to hold the paddle, how to stand, how to move and then covers all the
+                        strokes.
                     </p>
 
                     <p>She has advice for footwork drills and even offers tips on cooking Chinese food.</p>
@@ -118,8 +161,8 @@
                     <h5>Coach EmRatThich</h5>
 
                     <p>
-                        Nobody knows who he is but we know he is from Vietnam and currently living in France. He shares
-                        many Chinese Table Tennis secrets.
+                        Nobody knows who he is but we know he is from Vietnam and currently living in France.
+                        He shares many Chinese Table Tennis secrets.
                     </p>
 
                     <p>
@@ -162,45 +205,12 @@
                     <p>A great table tennis club founded in 1947 with leagues, coaching and open play.</p>
 
                     <p>
-                        <a target="_blank" href="http://www.phoenixtabletennisclub.org/index.php?sitelg=en&p=hom">
+                        <a
+                            target="_blank"
+                            href="http://www.phoenixtabletennisclub.org/index.php?sitelg=en&p=hom"
+                        >
                             Phoenix Table Tennis Club
                         </a>
-                    </p>
-                </div>
-            </div>
-
-            <div class="card-horiz hoverable flex-direction-column width50 div-center">
-                <a
-                    class="card-image width100"
-                    style="
-                        min-height: 140px;
-                        background-image: url('img/table_tennis_11.png');
-                        background-size: cover;
-                        background-position: center bottom;
-                    "
-                    target="_blank"
-                    href="https://www.tabletennis11.com/"
-                >
-                </a>
-
-                <div class="card-text width100">
-                    <h5>tabletennis11.com</h5>
-
-                    <p>
-                        This is the best place we've found for low price, fast shipping and high-quality racket
-                        assembly.
-                    </p>
-
-                    <p>They have most brands though, unfortunately, they don't sell Butterfly in the US.</p>
-
-                    <p>
-                        They are located in Estonia but their shipping is miraculously fast. We've ordered paddles,
-                        balls and rubber on Monday and received the finished paddles with rubber perfectly attached by
-                        Thursday. Truly incredible!
-                    </p>
-
-                    <p>
-                        <a target="_blank" href="https://www.tabletennis11.com/"> Table Tennis 11 Online Store </a>
                     </p>
                 </div>
             </div>
