Update CCC schedule for Nov 2021

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 4pm - 7pm <br />
-                                Tuesday: 8pm - 12 pm <em>(No PP on 10/12, 10/26)</em> <br />
-                                Wednesday: 4pm - 7pm <br />
-                                Thursday: 4pm - 7pm <br />
-                                Saturday: 9am - 12pm <em> (No PP on 10/2)</em>
+                                Monday: 4 - 7 PM<br />
+                                Tuesday: 8 - 12 AM <em>(No PP on Nov 9)</em> <br />
+                                Wednesday: 8 - 11:30 AM<br />
+                                Friday: 1 - 4:30 PM <em>(No PP on Nov 26)</em> <br />
+                                Saturday: 9 - 12 AM<em> (No PP on Nov 27)</em>
                             </div>
                         </div>
                     </div>
