Update schedule for Dec 2021

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
                 <h4>Welcome to the ping pong club in Chandler Arizona!</h4>
 
                 <p>
-                    The Chandler Table Tennis Club (CTTC) is collection of ping pong enthusiasts assembled in
-                    May 2017 to promote the sport in Chandler Arizona. Since 2017 the City of Chandler has
-                    graciously provided two venues and more than 10 tournament-level tables for the enjoyment
-                    of table tennis making Chandler a great place to live a healthy, active lifestyle.
+                    The Chandler Table Tennis Club (CTTC) is collection of ping pong enthusiasts assembled in May 2017 to promote the sport in Chandler Arizona.
+                    Since 2017 the City of Chandler has graciously provided two venues and more than 10 tournament-level tables for the enjoyment of table
+                    tennis making Chandler a great place to live a healthy, active lifestyle.
                 </p>
 
                 <!-- 
@@ -77,13 +76,13 @@
                 -->
 
                 <p>
-                    Table Tennis can be played at an equal level by men and women, kids and adults, young and
-                    old. It's the most fun, fair and equalizing sport on the planet!
+                    Table Tennis can be played at an equal level by men and women, kids and adults, young and old. It's the most fun, fair and equalizing sport
+                    on the planet!
                 </p>
 
                 <p>
-                    Don't be a couch potato watching sports you don't play on the television. Come play with
-                    us. We welcome beginners and experienced players alike to play with us.
+                    Don't be a couch potato watching sports you don't play on the television. Come play with us. We welcome beginners and experienced players
+                    alike to play with us.
                 </p>
             </section>
 
@@ -112,11 +111,10 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 4 - 7 PM<br />
-                                Tuesday: 8 - 12 AM <em>(No PP on Nov 9)</em> <br />
-                                Wednesday: 8 - 11:30 AM<br />
-                                Friday: 1 - 4:30 PM <em>(No PP on Nov 26)</em> <br />
-                                Saturday: 9 - 12 AM<em> (No PP on Nov 27)</em>
+                                Monday: 8 - 12 AM <em>(No ping pong Dec 6, 27)</em> <br />
+                                Tuesday: 4 - 7 PM <em>(No ping pong Dec 28)</em> <br />
+                                Wednesday: 4 - 7 PM <em>(No ping pong Dec 29)</em> <br />
+                                Saturday: 9 - 12 AM<em> (No ping pong Dec 4, 25)</em>
                             </div>
                         </div>
                     </div>
@@ -147,6 +145,9 @@
                                     href="https://www.chandleraz.gov/explore/chandler-recreation/centers-and-facilities/tumbleweed-recreation-center/open-gym"
                                     >Please click here for schedule</a
                                 >
+                                <br />
+                                Saturday: 4 - 7:30 PM <br />
+                                Sunday: 10 AM - 2 PM <br />
                             </div>
                         </div>
                     </div>
