update welcome text

--- a/index.html
+++ b/index.html
@@ -62,21 +62,15 @@
                     tennis making Chandler a great place to live a healthy, active lifestyle.
                 </p>
 
-                <!-- 
                 <p>
-                    Table tennis is well known as one of the fastest sports in the world in terms of reaction times and
-                    hit frequency. Amateur players can easily hit the ball more than once per second and professionals
-                    have been clocked hitting the ball up to 2 times per second!.
-
-                    It's also one of the most complex sports due to the
-                    importance of spin which can vary greatly and even be reversed from normal
-                    depending on the rubber a player chooses. In table tennis, speed and spin are
-                    equally critical.
-                </p> 
-                -->
+                    Table tennis is one of the fastest sports in the world and also one of the most complex. How is it complex? In table tennis, some rubbers
+                    are for generating spin and speed. Other rubbers (long pips) are for generating confusion and deception by using the opponents spin against
+                    him/her. Older, slower players can use the deceptive long pips rubber to overcome younger faster opponents. In no other sport can the nature
+                    of the game be changed so radically due to equipment.
+                </p>
 
                 <p>
-                    Table Tennis can be played at an equal level by men and women, kids and adults, young and old. It's the most fun, fair and equalizing sport
+                    Table Tennis can be played at an equal level by men and women, kids and adults, young and old. It's the most fun, fair and egalitarian sport
                     on the planet!
                 </p>
 
