update schedule Jan 2022

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 8 - 12 AM <em>(No ping pong Dec 6, 27)</em> <br />
-                                Tuesday: 4 - 7 PM <em>(No ping pong Dec 28)</em> <br />
-                                Wednesday: 4 - 7 PM <em>(No ping pong Dec 29)</em> <br />
-                                Saturday: 9 - 12 AM<em> (No ping pong Dec 4, 25)</em>
+                                Monday: 4 - 7 PM <br />
+                                Wednesday: 8 - 11 AM <br />
+                                Friday: 8 - 11 AM <br />
+                                Saturday: 9 AM - 1 PM<em> (No ping pong Jan 1, Jan 15)</em>
                             </div>
                         </div>
                     </div>
