fix oops on schedule

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 4 - 7 PM <em> (No ping pong Jan 17)<br />
+                                Monday: 4 - 7 PM <em> (No ping pong Jan 17)</em><br />
                                 Wednesday: 8 - 11 AM <br />
                                 Friday: 8 - 11 AM <br />
                                 Saturday: 9 AM - 1 PM<em> (No ping pong Jan 1, Jan 15)</em>
