update schedule Feb 2022

--- a/index.html
+++ b/index.html
@@ -105,10 +105,9 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 4 - 7 PM <em> (No ping pong Jan 17)</em><br />
-                                Wednesday: 8 - 11 AM <br />
+                                Monday: 4 - 7 PM <em> (No ping pong Feb 21)</em><br />
+                                Tuesday: 8 - 11 AM <em> (No ping pong Feb 15)</em><br />
                                 Friday: 8 - 11 AM <br />
-                                Saturday: 9 AM - 1 PM<em> (No ping pong Jan 1, Jan 15)</em>
                             </div>
                         </div>
                     </div>
