--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Monday: 4 - 7 PM <em> (No ping pong Feb 21)</em><br />
-                                Tuesday: 8 - 11 AM <em> (No ping pong Feb 15)</em><br />
-                                Friday: 8 - 11 AM <br />
+                                Mon: 4 - 7 PM <em> (No ping pong Mar 14)</em><br />
+                                Thur: 8 - 11:30 AM <br />
+                                Sat: 9 - 12 AM <br />
+                                <em> Tournament (Singles) Mar 12 @ 2:00 PM</em> <br />
+                                <em> Tournament (Doubles) Mar 13 @ 9 AM</em> <br />
                             </div>
                         </div>
                     </div>
