update schedule for April 2022

--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
 
                             <h6>Schedule:</h6>
                             <div class="body">
-                                Mon: 4 - 7 PM <em> (No ping pong Mar 14)</em><br />
+                                Mon: 4 - 7 PM <br />
                                 Thur: 8 - 11:30 AM <br />
                                 Fri: 8 - 11:30 AM <br />
                                 Sat: 9 - 12 AM <br />
-                                <em> Tournament (Singles) Mar 12 @ 2:00 PM</em> <br />
-                                <em> Tournament (Doubles) Mar 13 @ 9 AM</em> <br />
                             </div>
                         </div>
                     </div>
